Fix visibility of loading symbol when scrolled down the page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -656,24 +656,28 @@ li {
     left: 0; }
 
 #loading {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  font-size: 40px;
-  color: #5bc0de;
   display: -webkit-flex;
   display: -ms-flexbox;
+  display: flex;
+  height: 80px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 80px;
+  margin: auto;
+  z-index: 9999;
+  font-size: 40px;
+  color: #5bc0de;
   display: flex;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
-  align-items: center;
-  width: 100%;
-  height: 60px;
-  z-index: 9999; }
+  align-items: center; }
   #loading .fa-spinner {
     font-size: 50px; }
 
