--- a/resources/assets/sass/modules/_loading.scss
+++ b/resources/assets/sass/modules/_loading.scss
@@ -1,31 +1,40 @@
-#loading {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    font-size: 40px;
-    color: #5bc0de;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 60px;
-    z-index: 9999;
-    .fa-spinner {
-        font-size: 50px;
-    }
-}
-
-//#page-loading {
-//    background: white;
-//    height: 100%;
-//    width: 100%;
+//#loading {
 //    position: absolute;
 //    top: 0;
-//    z-index: 99;
+//    bottom: 0;
+//    margin: auto;
 //    font-size: 40px;
 //    color: #5bc0de;
 //    display: flex;
 //    justify-content: center;
 //    align-items: center;
+//    width: 100%;
+//    height: 60px;
+//    z-index: 9999;
+//    .fa-spinner {
+//        font-size: 50px;
+//    }
 //}
+
+#loading {
+    //background: white;
+    display: flex;
+    height: 80px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 80px;
+    margin: auto;
+    z-index: 9999;
+    font-size: 40px;
+    color: #5bc0de;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .fa-spinner {
+        font-size: 50px;
+    }
+}
